--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -1,27 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
 
 /* Dots */
-.slick-dots.slick-thumb {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+  .dot {
+    color: transparent;
+  }
 
-.slick-dots.slick-thumb li {
-  width: 10px;
-  height: 10px;
-  margin: 0 3px;
-  border-radius: 999px;
-  transition: all 0.5s ease-in-out;
-  will-change: width;
-  background-color: gray;
-}
-
-.slick-dots.slick-thumb li.slick-active {
-  background-color: red;
-  width: 24px;
-}
-
+  .slick-dots.slick-thumb {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .slick-dots.slick-thumb li {
+    width: 10px;
+    height: 10px;
+    margin: 0 3px;
+    border-radius: 999px;
+    transition: all 0.5s ease-in-out;
+    will-change: width;
+    background-color: gray;
+  }
+  
+  .slick-dots.slick-thumb li.slick-active {
+    background-color: red;
+    width: 24px;
+  }
+  
   /* Arrows */
   .slick-prev:before {
     content: "<" !important;
