Done with Gallery

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -5,14 +5,15 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 64px;
+    padding-bottom: 80px;
 }
 
 .mka__wrapper-gallery {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    height: clamp(34rem, 96vh, 102vh);
-    background-position: center;
-    background-repeat: no-repeat;
+    background-repeat:no-repeat;
     background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
 
 .mka__container-gallery {
