--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,7 +2,7 @@
 .home-img-div {
     position: relative;
     z-index: 1;
-    height: 760px;
+    height: 780px;
 }
 
 #mka__home-subtitle {
@@ -16,13 +16,12 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-  
 }
 
 #mka__home-description {
     text-align: center;
     color: white;
-    padding-top: 20rem;
+    padding-top: 0.5rem;
     font-family: 'Raleway', sans-serif;
     font-size: x-large;
 }
@@ -49,6 +48,26 @@
     left: 0;
     right: 0;
     text-align: center;
+}
+
+.mka__car-img-div {
+    text-align: center;
+    padding: 10rem; 
+    padding-top: 2rem;
+    padding-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#mercedes-min {
+    width: clamp(300px, 38%, 40%);
+    position: relative;
+}
+
+#bmw-min {
+    width: clamp(300px, 38%, 40%);
+    margin-right: -8rem;
+   position: relative;
 }
 
 @media (max-width: 479px) {
