--- a/src/components/HomePageCarList/HomePageCarList.css
+++ b/src/components/HomePageCarList/HomePageCarList.css
@@ -68,55 +68,40 @@
     padding-top: 32px;
 }
 
-.mka__logos-wrapper {
-    display: flex;
-    gap: 5rem;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.mka__logos-santanderbank {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.mka__logos-denzelbank {
-    display: inline-block;
-    margin-left: -60px;
-    margin-right: auto;
-}
-
 .mka__shortcuts-home-list {
     display: flex;
-    gap: 150px;
+    gap: 180px;
     text-align: center;
 }
 
 .mka__shortcut-home-list {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+}
+
+.mka__shortcut-home-list > a {
+    font-family: var(--font-family);
 }
 
 .mka__shortcut-home-list:hover{
     color: var(--color-red);
-    transition: 3s;
+    transition: 0.3s;
 }
 
-.mka__shortcut-text > a {
-    font-family: var(--font-family);
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 18px;
-    line-height: 30px;
-    letter-spacing: 0px;
-    color: var(--color-white);
+.mka__icon-size {
+    height: 30px;
+    width: 30px;
+    margin-bottom: 10px;
 }
 
-.mka__shortcut-icon > i {
-    padding-bottom: 30px;
-    color: var(--color-white);
+.mka__icon-size:hover {
+    color: var(--color-red);
+    transition: 0.3s;
 }
+
+/*Red line to divide content section*/
 
 .mka__section-divider {
     background-color: var(--color-red);
