--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,6 @@
     color: #363636;
     overflow: hidden;
     z-index: 9;
-    padding-top: 30px;
     width: 260px;
   }
   
@@ -14,7 +13,7 @@
     overflow: hidden;
     display: inline-block;
     width: 100%;
-    height: 15rem;
+    height: 12rem;
   }
   
   .card_list {
@@ -23,15 +22,59 @@
     height: auto;
     border: none;
     border-bottom: 1px solid #f1f1f1;
-      
   }
   
   .card_inline-list {
-    padding-left: 0;
+    padding: 12px 0;
     margin-left: 5px;
     max-width: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   
+  .card_info-upper {
+    display: flex;
+    gap: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .card_info-upper > li{
+    list-style: none;
+    color: #fff;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 15px;
+  }
+
+  .card_info-lower > li{
+    list-style: none;
+    color: #fff;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 15px;
+  }
+
+  .card_info-upper > li,i{
+    padding-right: 6px;
+  }
+
+  .card_info-lower > li,i{
+    padding-right: 6px;
+  }
+
+  .card_info-lower {
+    padding-top: 16px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .card_info-lower > li{
+    list-style: none;
+    color: #fff;
+  }
+
   .card_car-content {
     font-size: 16px;
     font-weight: 600;
@@ -41,6 +84,56 @@
   }
 
   .card_separator {
-      width: 15px;
-      border: #363636 solid 1px;
+      margin-bottom: 15px;
+      margin-left: auto;
+      margin-right: auto;
+  }
+
+  .card_separator::before {
+    content: '';
+    display: block;
+    margin: auto;
+    left: 50%;
+    height: 1px;
+    width: 30px;
+    bottom: -10px;
+    background: #000;
+    transition: width .8s ease,background-color .8s ease;
+    -webkit-transition: width .8s ease,background-color .8s ease;
+    margin-bottom: 4px;
+}
+
+  .card_separator::after {
+    width: 50px;
+    display: block;
+    margin: auto;
+    content: "";
+    height: 1px;
+    background: #000;
+    bottom: 0;
+    left: 50%;
+    transition: width .8s ease,background-color .8s ease;
+    -webkit-transition: width .8s ease,background-color .8s ease;
+}
+
+  .card_car-title {
+    font-size: 16px;
+    font-weight: 500;
+    font-family: var(--font-family);
+    color: #fff;
+    margin: 20px 0;
+    display: block;
+  }
+
+  .card_car-price {
+    background: #db2d2e;
+    padding: 5px 0;
+    margin-top: 20px;
+  }
+
+  .card_car-text {
+    font-size: 16px;
+    font-weight: 500;
+    font-family: var(--font-family);
+    color: #fff;
   }
