--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,11 +1,11 @@
 .card_wrapper {
     text-align: center;
-    min-height: 437.5px;
+    height: 437.5px;
     background: #00000033;
     color: #363636;
-    overflow: hidden;
     z-index: 9;
     width: 260px;
+    margin-right: 20px;
   }
   
   .card_image {
@@ -137,3 +137,22 @@
     font-family: var(--font-family);
     color: #fff;
   }
+
+@media (max-width: 1200px) {
+  .card_wrapper {
+    width: 210px;
+  }
+}
+
+@media (max-width: 992px) {
+  .card_wrapper {
+    width: 420px;
+  }
+}
+
+@media (max-width: 767px) {
+  .card_wrapper {
+    width: 700px;
+    height: 790px;
+  }
+}
