--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -67,7 +67,14 @@
 
 input {
     background-color: #fff;
-    margin: 10px 0;
+    border-radius: 2px;
+    display: block;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    height: 38px;
+    margin-bottom: 20px;
+    width: 130%;
 }
 
 .mka__form-button {
@@ -77,8 +84,45 @@ input {
     padding: 10px 15px;
     min-width: 300px;
     height: 50px;
-    margin-left: 760px;
-    margin-right: auto;
+    float: right;
+}
+
+.mka__form-button:hover {
+    background-color: var(--color-red);
+}
+
+#mka__larger-submit-field {
+    height: 7rem;
+}
+
+.mka__input-field-docs {
+    border: 1px dashed #fff;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+    width: 100%;
+    height: 8rem;
+}
+
+.mka__input-field-msg {
+    text-align: center;
+}
+
+.mka__input-field-msg > p {
+    text-align: center;
+    color: var(--color-grey);
+    font-family: var(--font-family);
+}
+
+.slick-track {
+    height: 250px;
+}
+
+.mka__input-field-title {
+    float: right;
 }
 
 @media (min-width: 767px) {
