Code clean up 1

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,142 +1,140 @@
 .card_wrapper {
-    text-align: center;
-    height: 437.5px;
-    background: #00000033;
-    color: #363636;
-    z-index: 9;
-    width: 260px;
-    margin-right: 20px;
-  }
-  
-  .card_image {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    width: 100%;
-    height: 12rem;
-  }
-  
-  .card_list {
-    position: relative;
-    bottom: 0;
-    height: auto;
-    border: none;
-    border-bottom: 1px solid #f1f1f1;
-  }
-  
-  .card_inline-list {
-    padding: 12px 0;
-    margin-left: 5px;
-    max-width: 95%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .card_info-upper {
-    display: flex;
-    gap: 1.5rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .card_info-upper > li{
-    list-style: none;
-    color: #fff;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 15px;
-  }
-
-  .card_info-lower > li{
-    list-style: none;
-    color: #fff;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 15px;
-  }
-
-  .card_info-upper > li,i{
-    padding-right: 6px;
-  }
-
-  .card_info-lower > li,i{
-    padding-right: 6px;
-  }
-
-  .card_info-lower {
-    padding-top: 16px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .card_info-lower > li{
-    list-style: none;
-    color: #fff;
-  }
-
-  .card_car-content {
-    font-size: 16px;
-    font-weight: 600;
-    color: #fff;
-    margin-bottom: 10px;
-    display: block;
-  }
-
-  .card_separator {
-      margin-bottom: 15px;
-      margin-left: auto;
-      margin-right: auto;
-  }
-
-  .card_separator::before {
-    content: '';
-    display: block;
-    margin: auto;
-    left: 50%;
-    height: 1px;
-    width: 30px;
-    bottom: -10px;
-    background: #000;
-    transition: width .8s ease,background-color .8s ease;
-    -webkit-transition: width .8s ease,background-color .8s ease;
-    margin-bottom: 4px;
+  text-align: center;
+  height: 437.5px;
+  background: #00000033;
+  color: #363636;
+  z-index: 9;
+  width: 260px;
+  margin-right: 20px;
 }
 
-  .card_separator::after {
-    width: 50px;
-    display: block;
-    margin: auto;
-    content: "";
-    height: 1px;
-    background: #000;
-    bottom: 0;
-    left: 50%;
-    transition: width .8s ease,background-color .8s ease;
-    -webkit-transition: width .8s ease,background-color .8s ease;
+.card_image {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  width: 100%;
+  height: 12rem;
 }
 
-  .card_car-title {
-    font-size: 16px;
-    font-weight: 500;
-    font-family: var(--font-family);
-    color: #fff;
-    margin: 20px 0;
-    display: block;
-  }
+.card_list {
+  position: relative;
+  bottom: 0;
+  height: auto;
+  border: none;
+  border-bottom: 1px solid #f1f1f1;
+}
 
-  .card_car-price {
-    background: #db2d2e;
-    padding: 5px 0;
-    margin-top: 20px;
-  }
+.card_inline-list {
+  padding: 12px 0;
+  margin-left: 5px;
+  max-width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-  .card_car-text {
-    font-size: 16px;
-    font-weight: 500;
-    font-family: var(--font-family);
-    color: #fff;
-  }
+.card_info-upper {
+  display: flex;
+  gap: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card_info-upper > li {
+  list-style: none;
+  color: #fff;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.card_info-lower > li {
+  list-style: none;
+  color: #fff;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.card_info-upper > li,
+i {
+  padding-right: 6px;
+}
+
+.card_info-lower > li,
+i {
+  padding-right: 6px;
+}
+
+.card_info-lower {
+  padding-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card_info-lower > li {
+  list-style: none;
+  color: #fff;
+}
+
+.card_car-content {
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.card_separator {
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card_separator::before {
+  content: "";
+  display: block;
+  margin: auto;
+  left: 50%;
+  height: 1px;
+  width: 30px;
+  bottom: -10px;
+  background: #000;
+  transition: width 0.8s ease, background-color 0.8s ease;
+  -webkit-transition: width 0.8s ease, background-color 0.8s ease;
+  margin-bottom: 4px;
+}
+
+.card_separator::after {
+  width: 50px;
+  display: block;
+  margin: auto;
+  content: "";
+  height: 1px;
+  background: #000;
+  bottom: 0;
+  left: 50%;
+  transition: width 0.8s ease, background-color 0.8s ease;
+  -webkit-transition: width 0.8s ease, background-color 0.8s ease;
+}
+
+.card_car-title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  margin: 20px 0;
+  display: block;
+}
+
+.card_car-price {
+  background: #db2d2e;
+  padding: 5px 0;
+  margin-top: 20px;
+}
+
+.card_car-text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+}
 
 @media (max-width: 1200px) {
   .card_wrapper {
