--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,114 +1,109 @@
 .mka__div {
-    width: auto;
-    top: 0;
-    border-bottom: 1px solid rgba(255,255,255,.2);
+  width: auto;
+  top: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .mka__header {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding-top: 2px;
-    padding-bottom: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2px;
+  padding-bottom: 5px;
 }
 
 .mka__header-list {
-    flex: 4 1;
+  flex: 4 1;
 }
 
-.mka__header-list,ul > li {
-    color: #fff;
-    list-style: none;
-    display: inline-block;
-    padding: 0.2em;
-    line-height: 24px;
-    font-family: var(--font-family);
-    font-size: min(22px, 14px);
+.mka__header-list,
+ul > li {
+  color: #fff;
+  list-style: none;
+  display: inline-block;
+  padding: 0.2em;
+  line-height: 24px;
 }
-
+/*
 .mka__header-link {
     color: #fff;
     font-family: var(--font-family);
     font-size: min(22px, 14px);
 }
-
+*/
 
 .mka__header-link > p {
   display: flex;
-  justify-items: center;
+  /*justify-items: center; */
   justify-content: center;
   gap: 5px;
 }
 
 .mka__header-link p > a:hover {
-    transition: 0.9s;
-    color: var(--color-red);
+  transition: 0.9s;
+  /* color: var(--color-red); */
 }
 
+/*
 .mka__header-link p > a:active {
-  color: var(--color-red);
+  color: var(--color-red); 
 }
-
+*/
 .mka__icons {
-    height: 14px;
-    width: 19px;
-    padding-right: 5px;
+  height: 14px;
+  width: 19px;
+  padding-right: 5px;
 }
 
 .mka__container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-  @media (min-width: 992px) {
-     .mka__container {
+@media (min-width: 992px) {
+  .mka__container {
     width: 970px;
+  }
 }
-  }
-  
-  @media (min-width: 1200px) {
-    .mka__container {
-      width: 1170px;
-    }
-  }
 
-  @media only screen and (min-width: 768px) and (max-width: 999px) {
-      .mka__container {
+@media (min-width: 1200px) {
+  .mka__container {
+    width: 1170px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 999px) {
+  .mka__container {
     width: 96%;
+  }
 }
-  }
 
-  @media (max-width: 767px) {
-
-    .mka__header-list {   
+@media (max-width: 767px) {
+  .mka__header-list {
     text-align: center;
     position: inherit;
     display: contents;
-        
-    }
-
-    .mka__header {
-      padding-top: 2px;
-      padding-bottom: 15px;
-      display: block;
-      text-align: center;
-  }
   }
 
-  @media (max-width: 295px) {
-    .mka__container {
-      width: 260px;
-    }
+  .mka__header {
+    padding-top: 2px;
+    padding-bottom: 15px;
+    display: block;
+    text-align: center;
+  }
+}
 
-    .mka__header-list {   
+@media (max-width: 295px) {
+  .mka__container {
+    width: 260px;
+  }
+
+  .mka__header-list {
     text-align: center;
     position: inherit;
     display: contents;
-        
-    }
   }
-
- 
+}
