--- a/src/components/HomePageCarList/HomePageCarList.css
+++ b/src/components/HomePageCarList/HomePageCarList.css
@@ -1,151 +1,150 @@
 .mka__financing-bg-image {
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: url('../../assets/dark.jpg');
-}
-
-.mka__container-home-list {
-        margin-right: auto;
-        margin-left: auto;
-        padding-left: 15px;
-        padding-right: 15px;
-        height: auto;
-}
-
-.mka__wrapper-home-list {
+    background-image: url("../../assets/dark.jpg");
+  }
+  
+  .mka__container-home-list {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: auto;
+  }
+  
+  .mka__wrapper-home-list {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    height:100%;
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 65rem;
-}
-
-.mka__content-home-list {
+  }
+  
+  .mka__content-home-list {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 32px;
-}
-
-.mka__shortcuts-home-list {
+  }
+  
+  .mka__shortcuts-home-list {
     display: flex;
     justify-content: space-around;
     text-align: center;
     width: 100%;
     margin-left: auto;
-    margin-right: auto; 
-} 
-
-.mka__shortcut-home-list {
+    margin-right: auto;
+  }
+  
+  .mka__shortcut-home-list {
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-}
-
-.mka__shortcut-home-list > a {
-    font-family: var(--font-family);
-}
-
-.mka__shortcut-home-list:hover{
+  }
+  /*
+  .mka__shortcut-home-list > a {
+      font-family: var(--font-family);
+  }
+  */
+  .mka__shortcut-home-list:hover {
     color: var(--color-red);
     transition: 0.3s;
-}
-
-.mka__icon-size {
+  }
+  
+  .mka__icon-size {
     height: 30px;
     width: 30px;
     margin-bottom: 10px;
-}
-
-.mka__icon-size:hover {
+  }
+  
+  .mka__icon-size:hover {
     color: var(--color-red);
     transition: 0.1s;
-}
-
-/*Red line to divide content section*/
-
-.mka__section-divider {
-    background-color: var(--color-red);
-    height: 1px;
-    width: 300px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 70px;
-    margin-bottom: 80px;
-}
-
-.mka__second-section-divider {
-    background-color: var(--color-red);
-    height: 1px;
-    width: 300px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 60px;
-}
-
-.mka__content-home-title {
+  }
+  
+  /*Red line to divide content section*/
+  /*
+  .mka__section-divider {
+      background-color: var(--color-red);
+      height: 1px;
+      width: 300px;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 70px;
+      margin-bottom: 80px;
+  }
+  */
+  /*
+  .mka__second-section-divider {
+      background-color: var(--color-red);
+      height: 1px;
+      width: 300px;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 60px;
+  }
+  */
+  .mka__content-home-title {
     text-align: center;
     padding: 32px 0;
     font-weight: 400;
-}
-
-/*CSS for container and content responsivnes*/
-
-@media (max-width: 340px) {
-    .mka__content-home-list > h1{
-        font-family: var(--font-family);
-        font-size: 18px;
-        line-height: 2;
+  }
+  
+  /*CSS for container and content responsivnes*/
+  
+  @media (max-width: 340px) {
+    .mka__content-home-list > h1 {
+      font-size: 18px;
+      line-height: 2;
     }
-}
-
-
-@media (min-width: 767px) {
+  }
+  
+  @media (min-width: 767px) {
     .mka__container-home-list {
-        width: 750px;
+      width: 750px;
     }
     .mka__content-home-list {
-        width: 100%;
-        float: left;
-}
-}
-
-
-@media (max-width: 767px) {
+      width: 100%;
+      float: left;
+    }
+  }
+  
+  @media (max-width: 767px) {
     .mka__shortcuts-home-list {
-    flex-direction: column;
-    gap: 5rem;
-    padding-bottom: 140px;
-} 
-}
-
-@media (min-width: 992px) {
+      flex-direction: column;
+      gap: 5rem;
+      padding-bottom: 140px;
+    }
+  }
+  
+  @media (min-width: 992px) {
     .mka__container-home-list {
-        width: 970px;
+      width: 970px;
     }
     .mka__content-home-list {
-        width: 100%;
-        float: left;
-}
-}
-
-@media (min-width: 1200px) {
+      width: 100%;
+      float: left;
+    }
+  }
+  
+  @media (min-width: 1200px) {
     .mka__container-home-list {
-    width: 1170px;
+      width: 1170px;
     }
     .mka__content-home-list {
-        width: 100%;
-        float: left;
+      width: 100%;
+      float: left;
     }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 999px) {
+  }
+  
+  @media only screen and (min-width: 768px) and (max-width: 999px) {
     .mka__container-home-list {
-        width: 96%;
+      width: 96%;
     }
-}
+  }
+  
