--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,55 +1,54 @@
- /* Navbar links */
+/* Navbar links */
 .mka__navbar {
     display: flex;
     padding-right: 15px;
     padding-top: 2rem;
     padding-left: 2rem;
     padding-bottom: 2rem;
-}
-
-.mka__navbar-links {
+  }
+  
+  .mka__navbar-links {
     flex: 1;
-}
-
-.mka__navbar-links_container {
+  }
+  
+  .mka__navbar-links_container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-
-.mka__navbar-links_container p {
+  }
+  
+  .mka__navbar-links_container p {
     color: #fff;
     font-size: 14px;
     line-height: 66px;
     text-transform: uppercase;
     font-weight: 400;
-    font-family: var(--font-family);
-    transition: padding .25s linear;
+    transition: padding 0.25s linear;
     padding: 0 0.5rem;
     cursor: pointer;
-}
-
-.mka__navbar-links_container p > a:link {
+  }
+  
+  .mka__navbar-links_container p > a:link {
     color: #fff;
-}
-
-.mka__navbar-links_container p > a:hover {
+  }
+  
+  .mka__navbar-links_container p > a:hover {
     transition: 0.5s;
     color: #db2d2e;
-}
-
-.mka__navbar-links_container p > i:hover {
+  }
+  
+  .mka__navbar-links_container p > i:hover {
     transition: 0.5s;
     color: #db2d2e;
-}
-
-.mka__navbar-links_container p > a.active {
+  }
+  
+  .mka__navbar-links_container p > a.active {
     color: #db2d2e;
-}
-
- /* Hamburger menu */
-
-.mka__navbar-menu_container-links {
+  }
+  
+  /* Hamburger menu */
+  
+  .mka__navbar-menu_container-links {
     color: #fff;
     font-size: 14px;
     line-height: 66px;
@@ -59,19 +58,19 @@
     padding: 0 1.5rem;
     cursor: pointer;
     width: 100%;
-}
-
-.mka__navbar-menu_container-links p > a:hover {
+  }
+  
+  .mka__navbar-menu_container-links p > a:hover {
     transition: 0.5s;
     color: #db2d2e;
-}
-
-.mka__navbar-menu_container-links p > a.active {
+  }
+  
+  .mka__navbar-menu_container-links p > a.active {
     color: #db2d2e;
-}
-
- /* Search */
-.mka__search-div {
+  }
+  
+  /* Search */
+  .mka__search-div {
     background: #0e0e0ed1;
     display: block;
     padding: 15px;
@@ -85,106 +84,106 @@
     left: 26rem;
     right: 0;
     top: 9rem;
-}
-
-.mka__search-input {
+  }
+  
+  .mka__search-input {
     border: 1px solid #fff;
     background: #0f1215;
     color: gray;
     width: 300px;
     margin-bottom: 0 !important;
-}
-
-.mka__search-input:focus {
+  }
+  
+  .mka__search-input:focus {
     border-color: #db2d2e;
-}
-.mka__search_column {
+  }
+  .mka__search_column {
     display: flex;
     flex-direction: column;
     max-width: 30px;
-}
-
-.io-close {
+  }
+  
+  .io-close {
     color: #fff;
     width: 21px;
     height: 21px;
     margin-top: 20px;
     padding-right: 5px;
-    
-}
-
-.io-close:hover {
+  }
+  
+  .io-close:hover {
     transition: 0.5s;
     color: #db2d2e;
-}
-
-.fa-search {
+  }
+  
+  .fa-search {
     position: absolute;
     right: 26px;
     top: 27px;
     color: #626262;
     cursor: pointer;
     font-size: 15px;
-}
-
-.fa-search:hover {
+  }
+  
+  .fa-search:hover {
     transition: 0.5s;
     color: #db2d2e;
-}
- /* Media Queries */
-@media (min-width: 992px){
+  }
+  /* Media Queries */
+  @media (min-width: 992px) {
     .mka__navbar-links {
-        justify-content: center;
+      justify-content: center;
     }
     .mka__navbar-menu_container-links {
-        display: none;
+      display: none;
     }
     .mka___hamburger-menu {
-        display: none;
+      display: none;
     }
-}
-
-@media (max-width: 992px){
+  }
+  
+  @media (max-width: 992px) {
     .mka__navbar-links_container {
-        display: none;
+      display: none;
     }
-
+  
     .mka___hamburger-menu {
-       float: right;
-       margin-top: -17px;
+      float: right;
+      margin-top: -17px;
     }
-
+  
     .mka__navbar-menu_container {
-        background-color: #0f1215;
-        width: 100%;
-        margin-top: 0.5rem;
-        border-radius: 5px;
-        position: relative;
+      background-color: #0f1215;
+      width: 100%;
+      margin-top: 0.5rem;
+      border-radius: 5px;
+      position: relative;
     }
-
+  
     .mka__navbar-menu-margins {
-        margin-left: 0;
-        margin-right: auto;
-        margin-top: 30px;
-        position: absolute;
-        right: 27px;
-        left: 21px;
-        z-index: 99;
+      margin-left: 0;
+      margin-right: auto;
+      margin-top: 30px;
+      position: absolute;
+      right: 27px;
+      left: 21px;
+      z-index: 99;
     }
-}
-
-@media (min-width: 1200px){
+  }
+  
+  @media (min-width: 1200px) {
     .mka__navbar-links_container p {
-        padding: 0 0.8rem;
+      padding: 0 0.8rem;
     }
-
+  
     .mka__search-div {
-        left: 24rem;
-}
-}
-
-@media (max-width: 1200px){
-    .mka__search-div {
-        left: 20rem;
+      left: 24rem;
     }
-}
+  }
+  
+  @media (max-width: 1200px) {
+    .mka__search-div {
+      left: 20rem;
+    }
+  }
+  
